Bug 72303, store copy service in local cache instead of message session attributes.
* Make sure call to VSUtil.switchToHostOrgForGlobalShareAsset is proxied correctly
* Add logging for STOMP messages received
* Temporarily start instances sequentially to avoid race condition
* Remove log noise from service proxy